--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Adel Moumen</title>
 <meta name="description" content="Adel Moumen — Speech & Language Modelling, SpeechBrain, multilingual SLMs"/>
 <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
 </head>
 <body>
 <div id="body-container">
@@ -44,7 +45,7 @@
 
         <p><strong class="section">RESEARCH INTERESTS</strong></p>
         <p>
-        I develop multilingual SLMs that speak natively, focusing on cross-lingual and cross-modal transfer. My work spans discrete speech tokenisers, novel architectures, and training curricula with the aim of solving the "Speech Turing Test".
+        I develop multilingual Speech Language Models (SLMs) that speak natively, focusing on cross-lingual and cross-modal transfer. My work spans discrete speech tokenisers, novel architectures, and training curricula with the aim of solving the "Speech Turing Test".
   
         </p>
 
