--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <ul>
           <li>Cross‑Lingual Interleaving for Spoken Language Models. <em>ICASSP 2026</em> (under review).</li>
           <li>Text-speech language models with improved cross-modal transfer by aligning abstraction levels. Preprint. [<a href="https://arxiv.org/pdf/2503.06211">preprint</a>]</li>
-          <li>Discrete Audio Tokens: More Than a Survey! <em>TMLR</em> [<a href="https://arxiv.org/pdf/2506.10274?">preprint</a>]</li>
+          <li>Discrete Audio Tokens: More Than a Survey! <em>TMLR 2025</em> [<a href="https://arxiv.org/pdf/2506.10274?">preprint</a>]</li>
           <li>Open-source conversational ai with speechbrain 1.0. <em>JMLR 2024</em> [<a href="https://www.jmlr.org/papers/volume25/24-0991/24-0991.pdf">preprint</a>]</li>
           <li>Stabilising and accelerating light gated recurrent units for automatic speech recognition. <em>ICASSP 2023</em> [<a href="https://arxiv.org/pdf/2302.10144">preprint</a>]</li>
         </ul>
